--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.115.6
 uvicorn[standard]==0.34.0
 crewai==0.100.1
-pymongo==4.10.1
+pymongo>=4.9,<4.10
 motor==3.6.0
 python-dotenv==1.0.1
 pydantic==2.10.4
