Adicao dos agentes, memoria, tools, testes unitarios completos

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4o-mini
+SERPAPI_KEY=your_serpapi_key_here
 MONGO_URI=mongodb://localhost:27017
 MONGO_DB=banking_agents
+DEBUG=false
