--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -33,9 +33,7 @@ jobs:
         with:
           python-version: '3.12'
           cache: 'pip'
-          cache-dependency-path: |
-            requirements.txt
-            requirements-dev.txt
+          cache-dependency-path: requirements.txt
 
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
@@ -43,10 +41,8 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-
-      - name: Run linter
-        run: ruff check app/
 
       - name: Run tests
-        run: pytest -v --cov=app --cov-report=xml --cov-report=term-missing
+        run: pytest -v
+        env:
+          PYTHONPATH: ${{ github.workspace }}
