--- a/.gitignore
+++ b/.gitignore
@@ -2,36 +2,97 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.pyc
+*.pyo
+*.pyd
 
 # Virtual environments
 venv/
 .venv/
 env/
 .env
+ENV/
+env.bak/
+venv.bak/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
 
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
+*~
+.project
+.pydevproject
+.settings/
 
 # Testing
 .pytest_cache/
 .coverage
+.coverage.*
 htmlcov/
 coverage.xml
+*.cover
+.hypothesis/
+.tox/
+nosetests.xml
+test-results/
+*.test
+
+# Type checking
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
+.pytype/
+
+# Linters
+.ruff_cache/
 
 # Distribution
 dist/
 build/
 *.egg-info/
+*.egg
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
 
 # Logs
 *.log
+logs/
+pip-log.txt
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb
+
+# Streamlit
+.streamlit/
 
 # OS
 .DS_Store
 Thumbs.db
+desktop.ini
 
 # Claude
 .claude/
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~.nib
