--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
 fastapi==0.115.6
 uvicorn[standard]==0.34.0
-crewai==0.100.1
-pymongo>=4.9,<4.10
-motor==3.6.0
-python-dotenv==1.0.1
-pydantic==2.10.4
-pydantic-settings==2.7.1
-openai==1.59.5
+crewai>=1.8.0
+pymongo>=4.9
+motor>=3.6.0
+python-dotenv>=1.0.1
+pydantic>=2.10.0
+pydantic-settings>=2.7.0
+httpx>=0.28.0
+streamlit>=1.40.0
+pandas>=2.0.0
+
+# Dependências de teste
+pytest>=8.0.0
+pytest-cov>=4.1.0
+pytest-asyncio>=0.23.0
